--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,14 @@
   	// See: https://aka.ms/vscode-remote/samples/docker-from-docker.
   	"mounts": [
     	"source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
-  	]
+	],
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.python"
+			]
+		}
+	}
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
